<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            tools:ignore="ContentDescription,RtlSymmetry"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:src="@drawable/img_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:text="@string/share"
            android:textColor="@color/c_222"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search"
        tools:ignore="UseCompoundDrawables"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            tools:ignore="RtlSymmetry"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:src="@drawable/img_comments" />

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:text="@string/comments"
            android:textColor="@color/c_222"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            tools:ignore="RtlSymmetry"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:src="@drawable/like" />

        <TextView
            android:id="@+id/tv_like_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:text="@string/like"
            android:textColor="@color/c_222"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</LinearLayout>